--- a/public/style.css
+++ b/public/style.css
@@ -1,30 +1,54 @@
-body{
-    font-size: 21px;
+:root {
+    --main: #454d66;
+    --sub: #309975;
+    --sub-two: #58b368;
+    --sub-three: #dad873;
+    --sub-four: #efeeb4;
 }
 
-button{
+body {
+    font-size: 21px;
+    background-color: var(--main);
+}
+
+header {
+    background-color: var(--sub);
+    border: 1px solid black;
+    border-radius: 10px;
+    margin:10px;
+    text-align: center;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    justify-content: center;
+}
+
+.flex-container > div {
+    background-color: var(--sub-four);
+    padding: 2px;
+    border: 1px solid black;
+    border-radius: 10px;
+    margin: 5px;
+    text-align: center;
+    width: 23%;
+    min-width: 200px;
+}
+
+button {
     width: 200px;
     height: 200px;
     font-size: 21px;
 }
 
-.log{
+.log {
     width: 250px;
     height: 800px;
 }
 
-div{
-    padding: 2px;
-    border: 1px solid black;
-    margin-top:5px;
-}
-
-td{
-    border: 1px solid black;
-    font-size: 25px;
-    padding:5px;
-}
-
-.bold{
+.bold {
     font-weight: bold;
 }
