--- a/style.css
+++ b/style.css
@@ -1,47 +1,57 @@
 :root {
-    --main: #454d66;
-    --sub: #309975;
-    --sub-two: #58b368;
-    --sub-three: #dad873;
-    --sub-four: #efeeb4;
+    --main: white;
+    --sub: #75b481;
 }
 
 body {
-    font-size: 21px;
+    margin: 0px;
+    font-size: 25px;
     background-color: var(--main);
 }
 
-header {
+.header-flex-container {
     background-color: var(--sub);
-    border: 1px solid black;
-    border-radius: 10px;
-    margin:10px;
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    padding: 60px;
+    color: var(--main);
 }
 
-.flex-container {
+.header-flex-container .main-text {
+    font-size: 40px;
+}
+
+.top-bar-flex-container {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: flex-start;
+}
+
+.top-bar-flex-container > div {
+    margin: 5px;
+}
+
+.top-bar-flex-container .btn {
+    flex-basis: 100%;
+}
+
+.content-flex-container {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
-.flex-container > div {
-    background-color: var(--sub-four);
+.content-flex-container > div {
     padding: 2px;
     border: 1px solid black;
-    border-radius: 10px;
     margin: 5px;
     text-align: center;
-    width: 23%;
-    min-width: 200px;
 }
 
-button {
-    width: 200px;
-    height: 200px;
-    font-size: 21px;
+.content-flex-container > div > div {
+    background-color: var(--sub);
+    color: var(--main);
 }
 
 .log {
@@ -51,4 +61,8 @@ button {
 
 .bold {
     font-weight: bold;
+}
+
+.icon {
+    width: 30px;
 }
